# parasync

./: CMakeLists.txt  README.md
cmake/: FindPicoquic.cmake  Findphoton.cmake
src/: parallel_cdc.cpp  parallel_cdc.h  skysync_f.cpp  skysync_f.h
src/crc32/: crc32c.c  crc32c.h
src/net/: curl_client.cpp  net.h  rpc.h
src/parasync/: chunker.cpp  chunker.h  parasync_common.h  sync_worker.cpp  sync_worker.h
tests/: crc32c_test.cpp
tests/parasync/: para_sync_test.cpp  sync_task_test.cpp  sync_task_test.sh
